# Nebula

./: .gitignore  Cargo.toml  Dockerfile  README.md  REDEME.md  ]  bacon.toml  index.html
assets/characters/: .Lee.png-autosave.kra  .sonick.jpg-autosave.kra  1.json  2.json  3.json  Lee.png~  template.xml
assets/maps/: 1.json  2.json  3.json  4.json  5.json  6.json  7.json
presentation/: README.html
src/: base.rs  character.rs  client.rs  game.rs  main.rs  renderer.rs
src/base/: sircle.rs  vector2.rs
src/client/: renderer.rs
src/game/: character.rs  map.rs  networking.rs  physic.rs
