[package]
name = "Nebula"
version = "0.0.9"
edition = "2024"

[dependencies]
glium = "0.36.0"      # OpenGL
winit = "0.30.12"     # Window and input manager
image = "0.25.9"      # Images

chrono = "0.4.42"     # Time and Date lib
serde_json = "1.0.145"# Serialization to JSON
serde = { version = "1.0.228", features = ["derive"] } # Serialization
reqwest = { version = "0.12.24", features = ["blocking"]}   # Http request lib
uuid = { version = "1.18.1", features = ["v4"]} # UUI suport
clap = { version = "4.5.55", features = ["derive"] } # Argument parser
